Squish icon fix
Slightly resizing icon so it isn't squished on mobile

--- a/style.css
+++ b/style.css
@@ -2132,7 +2132,7 @@ li.coco-gallery-item.b-w img {
     }
 
     #aliceLogoDiv > div > a > img.aliceOneLogo {
-      height: 45vh !important;
+      height: 40vh !important;
       margin: 0 auto;
       width: auto !important;
       /* min-width: 60vw !important; */
